[package]
name = "async-tests"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
tokio-util = "0.7"
futures = "0.3"
sysinfo = "0.37.2"
opentelemetry_sdk = "0.31.0"
opentelemetry = "0.31.0"
opentelemetry-otlp = { version= "0.31.0" }
opentelemetry-stdout = { version = "0.31.0", features = ["metrics"] }
paste = "1.0.15"

